--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -3,8 +3,20 @@
 {% block content %}
 
     <div class="card table-container">
+
+        <div class="header">
+            <a class="button" href="/instructors/create">Novo</a>
+
+            <form action="/instructors" method="GET">
+                <input 
+                    type="text"
+                    name="filter"
+                    placeholder="Filtrar por Nome"
+                >
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
         
-        <a href="/instructors/create">Novo</a>
         
         <table width=100%>
             <thead>
