--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -12,6 +12,7 @@
                     type="text"
                     name="filter"
                     placeholder="Filtrar por Nome"
+                    value="{{ filter }}"
                 >
                 <button type="submit">Filtrar</button>
             </form>
