--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -42,6 +42,13 @@
                 {% endfor %}
             </tbody>
         </table>
+        
+        <div class="pagination"
+            data-page = {{ pagination.page }}
+            data-total = {{ pagination.total }}
+        >
+
+        </div>
     </div>
 
 {% endblock %}
