feature: Complete feature of pagination

--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -37,18 +37,17 @@
                     </td>
                     <td>{{ instructor.services }}</td>
                     <td>{{ instructor.total_students }}</td>
-                    <td><a href="/instructors/{{ instructor.id }} ">Ver</a></td>
+                    <td><a href="/instructors/{{ instructor.id }}">Ver</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
         
         <div class="pagination"
-            data-page = {{ pagination.page }}
-            data-total = {{ pagination.total }}
-        >
-
-        </div>
+            data-page={{pagination.page}}
+            data-total ={{pagination.total}}
+            data-filter={{filter}}
+        ></div>
     </div>
 
 {% endblock %}
