--- a/public/styles.css
+++ b/public/styles.css
@@ -169,6 +169,7 @@ a.button {
     width: 100%;
     color: white;
     font-size: 16px;
+    cursor: pointer;
 }
 
 a.button {
@@ -276,4 +277,33 @@ tbody tr td:last-child a,
 
 .table-container .header form button {
     margin: 0;
+}
+
+/* PAGINATION */
+
+.table-container {
+    display: grid;
+    grid-template: 64px 1fr 16px / 1fr;
+}
+
+.table-container .header {
+    margin: 0;
+    align-self: start;
+}
+
+.table-container .pagination {
+    margin: 0;
+    align-self: end;
+    justify-self: center;
+}
+
+.pagination a,
+.pagination span {
+    color: var(--color-rocket);
+    text-decoration: none;
+    margin-right: 16px;
+}
+
+.pagination a:hover {
+    filter: brightness(0.3);
 }
